[package]
name = "lightningd"
version = "0.1.0"
authors = ["Luca Vaccaro <me@lvaccaro.com>"]
description = "Utility to run a regtest lightningd core process, useful in integration testing environment"
license = "MIT"
repository = "https://github.com/lvaccaro/lightningd"
documentation = "https://docs.rs/lightningd/"
rust-version = "1.57.0"
edition = "2018"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]

[dependencies]
log = "0.4"
which = "4.2.5"
anyhow = "1.0.66"
tempfile = "3"
clightningrpc = "0.3.0-beta.6"

[dev-dependencies]
env_logger = "0.9.0"

[build-dependencies]
bitcoin_hashes = { version = "0.12", optional = true }
flate2 = { version = "1.0", optional = true } 
tar = { version = "0.4", optional = true } 
minreq = { version = "2.6.0", default-features = false, features = ["https"], optional = true }
zip = { version = "0.5", optional = true }
anyhow = "1.0.66"
ubuntu-version = "0.2.5"
xz = "0.1.0"


[features]
# download is not supposed to be used directly only through selecting one of the version feature
"download" = ["bitcoin_hashes", "flate2", "tar", "minreq", "zip"]

"23_05_2" = ["download", "23_05"]
"23_05" = ["download"]

"doc" = [] # used only for documentation building

[package.metadata.docs.rs]
#features = ["download", "doc"]
rustdoc-args = ["--cfg", "docsrs"]